fix(scss): remove min-h-screen which causes a bug on scroll on mobile

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,5 +1,5 @@
 body {
-  @apply min-h-screen;
+  //@apply min-h-screen;
 }
 
 input {
